--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: GoogleSansBd;
+  src: url("./utils/fonts/GoogleSansDisplay-Bold-v1.27.ttf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: GoogleSansRg;
+  src: url("./utils/fonts/GoogleSansDisplay-Regular-v1.27.ttf");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: GoogleSansMd;
+  src: url("./utils/fonts/GoogleSansDisplay-Medium-v1.27.ttf");
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  font-family: GoogleSansRg;
+  /* background-color: #3c83da; */
+  overflow-x: hidden;
+}
+
+.fontBd {
+  font-family: GoogleSansBd;
+}
+
+.fontMd {
+  font-family: GoogleSansMd;
+}
+
+.fontRG {
+  font-family: GoogleSansRg;
+}
+
+.register-box {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-radius: 4px;
+  border: 0;
+  background-color: #3c83da;
+  /* box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23); */
+  transition: 0.2s all ease;
 }
