static ui added

--- a/client/src/components/Authentication/style.css
+++ b/client/src/components/Authentication/style.css
@@ -43,3 +43,12 @@ a:hover{
   opacity: 0.5;
   background-color: #3c83da;
 }
+
+.stalk-friend {
+  background: #0F9D58;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 8px 16px;
+  text-align: center;
+}
