--- a/client/src/components/Dashboard/style.css
+++ b/client/src/components/Dashboard/style.css
@@ -81,3 +81,18 @@ thead tr th {
 .stats-wrapper {
   /* background: #d5d5d5; */
 }
+
+.div-name {
+  color: #0F9D58;
+}
+
+.stalk-friend-dashboard {
+  background: #0F9D58;
+  border-radius: 4px;
+  float: right;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 8px 16px;
+  text-align: center;
+}
