stalk user profile ui added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,7 @@ body {
   font-family: GoogleSansRg;
   /* background-color: #3c83da; */
   overflow-x: hidden;
+  background-color: #f9f9f9;
 }
 
 .fontBd {
