--- a/client/src/components/Authentication/style.css
+++ b/client/src/components/Authentication/style.css
@@ -1,54 +1,55 @@
 .hint {
-  font-size: 0.8em;
+	font-size: 0.8em;
 }
 
 input {
-  border: 0;
+	border: 0;
 }
 
 .button {
-  padding: 6px 12px;
-  background: white;
-  color: #3c83da;
-  font-family: GoogleSansBd;
-  border: 0;
-  border-radius: 2px;
-  transition: 0.2s all linear;
+	padding: 6px 12px;
+	color: white;
+	background-color: #3c83da;
+	font-family: GoogleSansBd;
+	border: 0;
+	border-radius: 2px;
+	transition: 0.2s all linear;
 }
 
 .box-hr {
-  background: #ffffff;
-  height: 0.5px;
-  /* width: 70%; */
+	background: #ffffff;
+	height: 0.5px;
+	/* width: 70%; */
 }
 
 a {
-  color: white;
+	color: white;
 }
 
-a:hover{
-    color: white;
-    text-decoration: none;
+a:hover {
+	color: white;
+	text-decoration: none;
 }
 
 .button:hover {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.23);
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.23);
 }
 
-.title, .tagline {
-  margin-left: 12px;
-}
+/* .title,
+.tagline {
+	margin-left: 12px;
+} */
 
-.bottomline{
-  opacity: 0.5;
-  background-color: #3c83da;
+.bottomline {
+	opacity: 0.5;
+	background-color: #3c83da;
 }
 
 .stalk-friend {
-  background: #0F9D58;
-  border-radius: 4px;
-  color: #ffffff;
-  cursor: pointer;
-  padding: 8px 16px;
-  text-align: center;
+	background: #0f9d58;
+	border-radius: 4px;
+	color: #ffffff;
+	cursor: pointer;
+	padding: 8px 16px;
+	text-align: center;
 }
